Fri Jan 05 19:06:52 2007  Steve Huston  <shuston@riverace.com>

        * templates/vc7dll.mpt:
        * templates/vc7exe.mpt:
        * templates/vc7lib.mpt:
        * templates/vc7libexe.mpt: Added Pharlap ETS configuration sections
          to allow generation of Pharlap ETS configurations with VC7.1.
          Thank you to David Hauck for contributing these changes.

Thu Jan  4 16:08:51 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * devtools/document_template.pl:

          Changed the table style for the html output.

        * docs/templates/vc7.txt:

          Added the output_subdir definition.

        * docs/templates/vc8.txt:

          Began documenting the vc8 template.

        * docs/MPC.sgml:
        * docs/USAGE:
        * modules/AutomakeWorkspaceCreator.pm:
        * modules/BDS4WorkspaceCreator.pm:
        * modules/Driver.pm:
        * modules/EM3WorkspaceCreator.pm:
        * modules/HTMLWorkspaceCreator.pm:
        * modules/MakeWorkspaceBase.pm:
        * modules/Options.pm:
        * modules/ProjectCreator.pm:
        * modules/VC6WorkspaceCreator.pm:
        * modules/VC71WorkspaceCreator.pm:
        * modules/VC7WorkspaceCreator.pm:
        * modules/VC8WorkspaceCreator.pm:
        * modules/WorkspaceCreator.pm:

          Added an option, -nocomments, which causes MPC to generate
          workspaces without comments at the top.

Tue Jan  2 20:07:32 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed a bug where exclusion of more than one file would result in
          only the last file listed being excluded.

Tue Jan  2 18:05:52 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * config/zzip.mpb:

          Since zzip requires zlib, inherit from the zlib base project and
          and have requires += zlib.

        * modules/Driver.pm:

          Simplified determination of workspace or project creators.

        * modules/VC7ProjectCreator.pm: