@@ -1,3 +1,10 @@
+Mon Jan  8 13:39:23 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/AutomakeWorkspaceCreator.pm:
+
+          During post processing, remove any duplicate targets.  Duplicate
+          targets show up as build warnings from automake.
+
 Fri Jan 05 19:06:52 2007  Steve Huston  <shuston@riverace.com>
 
         * templates/vc7dll.mpt:
